[project]
name = "mcp-server-lab"
version = "0.1.0"
description = "Week 4 Lab: Build an MCP Server for World Bank Data"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "polars>=1.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
